# howdy

./: .gitignore
howdy-gtk/src/: authsticky.cc  meson.build  onboarding.cc  tab_video.py  window.cc  window.py
howdy/src/: compare.cc  compare.hh  meson.build  models.cc  rubber_stamps.cc  rubber_stamps.hh  snapshot.cc  snapshot.hh  utils.hh  video_capture.cc  video_capture.hh
howdy/src/cli/: add.cc  clear.cc  config.cc  disable.cc  list.cc  meson.build  remove.cc  set.cc  snap.cc  test.cc
howdy/src/keyboard/: canonical_names.cc  generic.cc  generic.hh  keyboard.cc  keyboard.hh  keyboard_event.cc  keyboard_event.hh  nix_common.cc  nix_keyboard.cc  nix_keyboard.hh
howdy/src/pam/: enter_device.cc  main.cc  meson.build
howdy/src/string_utils/: string_utils.cc
